# fastapi-graphql

./: .flake8  README.md  controller.py  core.py  main.py  pyproject.toml  schema.py
config/: database.py  test_config.py
tests/: test_comments.py  test_posts.py  test_query.py
