[tool.poetry]
name = "fastapi-graphql"
version = "0.1.0"
description = ""
authors = ["Kirill Netreba <kirill.netreba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.92.0"
uvicorn = "0.20.0"
masonite-orm = "2.18.6"
psycopg2-binary = "2.9.5"
strawberry-graphql = {version = "0.158.0", extras = ["fastapi"]}


[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
httpx = "0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
